crates/keron-lang/tests/corpus/errors/check/symlink_missing_arg.keron
val s: Symlink = symlink(source = "a")
